===================
Django Yarr Changes
===================

Changelog
=========

0.4.1       2014-02-07  See UPGRADE
            Feature:    Can now mark all read without reloading page
            Bugfix:     Static read all button only changes state of unread
            Bugfix:     Fixed load status appearing at wrong time
            Bugfix:     Fixed list mode click having incorrect effect
            Bugfix:     Fixed scrollTo error
            Bugfix:     Expiry dates are reset when item state changes
            Bugfix:     Unread count updates correctly when marking all read
            Bugfix:     Fixed dropdown bugs

0.4.0       2014-02-06  See UPGRADE
            Feature:    Simplified control bar
            Feature:    Can now change feeds without reloading page (fixes #27)
            Feature:    Can now change filter and order without reloading page
            Feature:    Simplified save/read state, save indicated in list mode
            Bugfix:     Changed Entry .save and .read to .state (fixes #35)
            Bugfix:     Added Feed.text for user-customisable title (fixes #34)
            Bugfix:     Unread count updates correctly when reading items
            Bugfix:     Unread count shows next to abreviated feed
            Bugfix:     Feed toggle correctly determines feedlist width
            Internal:   Refactored list_entries.js

0.3.13      2014-01-05  See UPGRADE
            Feature:    Changed check_feeds --force to also force a db update
            Feature:    Allow more HTML tags in entries (#32)
            Bugfix:     Fixed entries not expiring correctly
            Bugfix:     Unread count at 0 removes class (#31)
            Bugfix:     Fixed urls.py for Django 1.6 (#30)
            Thanks to:  Chris Franklin (chrisfranklin) for #30
                        Tom Most (twm) for #31 and #32

0.3.12      2013-11-19
            Bugfix:     Fixed scroll buttons sprite

0.3.11      2013-11-15